--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -3,6 +3,9 @@ $black: #07030b;
 $white: #faf7f2;
 $blue: #5f6b85;
 
+$smallWide: 320px;
+$largeWide: 640px;
+
 // BORDERBOX
 html {
   box-sizing: border-box;
@@ -12,6 +15,7 @@ html {
 }
 
 
+// GENERAL STYLES
 
 body {
   background-color: $white;
@@ -25,10 +29,16 @@ body {
   color: $black;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .excerpt {
   font-family: 'Anton', sans-serif;
   padding: 0.5rem 1rem;
   margin: 0;
+}
+
+.excerpt p {
+  font-size: 1rem;
+  margin-top: 0;
+
 }
 
 a {
@@ -52,6 +62,13 @@ ul {
 figure {
   margin: 1rem 0;
   width: 100%;
+}
+
+blockquote, #main blockquote p {
+  font-family: monospace, sans-serif;
+  font-size: 1rem;
+  font-weight: 200;
+  margin-bottom: 0.8rem;
 }
 
 .pointer {
@@ -162,7 +179,7 @@ figure {
           }
           img {
             height: 160px;
-            width: 320px;
+            width: $smallWide;
           }
           h4 {
             font-size: 1.6rem;
@@ -177,9 +194,30 @@ figure {
           background-color: $blue;
           color: $white;
           @include media('>tablet') {
+            h3 {
+              transform: none;
+              position: static;
+              width: $smallWide;
+              margin: 0;
+            }
             flex: 1 1 8rem;
             flex-direction: column;
-            max-width: 320px;
+            min-width: $smallWide;
+            max-width: $smallWide;
+            li {
+              max-width: $smallWide;
+              margin-left: 0;
+              clear: left;
+              a {
+                flex-direction: column;
+              }
+              img {
+                width: $smallWide;
+              }
+              h4, p {
+                width: ($smallWide -10%);
+              }
+            }
           }
         }
 
@@ -189,6 +227,12 @@ figure {
           @include media('>tablet') {
             min-height: 16vh;
             width: 98vw;
+            flex-wrap: wrap;
+            li {
+//              width: 640px;
+//              min-width: $smallWide;
+//              max-width: $largeWide;
+            }
           }
         }
 
@@ -198,3 +242,14 @@ figure {
 ul>h3 {
  text-transform: capitalize;
 }
+
+
+
+
+
+/************** UTILITIES ***********************/
+/*
+blockquote:after{
+  content: 'copy';
+}
+*/
