--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,5 +5,6 @@ FONTS
 @import url(https://fonts.googleapis.com/css?family=Anton|Maven+Pro);
 
 @import 'breakpoints';
-@import 'main';
+//@import 'main';
+@import 'alt';
 
